feat: integrate aeko==2.0.0 (#33)
